crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__sys-exit-alias_sys_exit_alias_13.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR1722 [*] Use `sys.exit()` instead of `exit`
 --> sys_exit_alias_13.py:1:1
  |
1 | exit(code=2)
  | ^^^^
help: Replace `exit` with `sys.exit()`
  |
  - exit(code=2)
1 + import sys
2 + sys.exit(2)
3 |
  |
note: This is an unsafe fix and may change runtime behavior
