crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__sys-exit-alias_sys_exit_alias_3.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR1722 [*] Use `sys.exit()` instead of `quit`
 --> sys_exit_alias_3.py:4:1
  |
3 | exit(0)
4 | quit(0)
  | ^^^^
help: Replace `quit` with `sys.exit()`
  |
3 | exit(0)
  - quit(0)
4 + exit(0)
5 |
  |
note: This is an unsafe fix and may change runtime behavior

PLR1722 [*] Use `sys.exit()` instead of `quit`
 --> sys_exit_alias_3.py:9:5
  |
7 | def main():
8 |     exit(1)
9 |     quit(1)
  |     ^^^^
help: Replace `quit` with `sys.exit()`
   |
8  |     exit(1)
   -     quit(1)
9  +     exit(1)
10 |
   |
note: This is an unsafe fix and may change runtime behavior

PLR1722 Use `sys.exit()` instead of `quit`
  --> sys_exit_alias_3.py:16:5
   |
15 |     exit(1)
16 |     quit(1)
   |     ^^^^
help: Replace `quit` with `sys.exit()`
