crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__sys-exit-alias_sys_exit_alias_9.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR1722 [*] Use `sys.exit()` instead of `exit`
 --> sys_exit_alias_9.py:2:5
  |
1 | def main():
2 |     exit(0)
  |     ^^^^
help: Replace `exit` with `sys.exit()`
  |
1 + import sys
2 | def main():
  -     exit(0)
3 +     sys.exit(0)
4 |
  |
note: This is an unsafe fix and may change runtime behavior
