crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__too-many-branches_too_many_branches.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR0912 Too many branches (13 > 12)
  --> too_many_branches.py:8:5
   |
 7 | # pylint: disable=using-constant-test
 8 | def wrong(): # [too-many-branches]
   |     ^^^^^
 9 |     """ Has too many branches. """
10 |     if 1:
   |

PLR0912 Too many branches (13 > 12)
  --> too_many_branches.py:80:5
   |
78 |         pass
79 |
80 | def with_statement_wrong():
   |     ^^^^^^^^^^^^^^^^^^^^
81 |     """statements inside the with statement should get counted"""
82 |     with suppress(Exception):
   |
